fixed grid layout of container

--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,25 @@
     margin: 0;
     padding: 0;
     font-size: 18px;
+
 }
 
 .container {
     display: grid;
-    grid-template-rows: 1fr 3fr;
-    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 8fr;
+    grid-template-columns: 1fr 5fr;
+}
+
+.container>div {
+    border: 1px dotted red;
 }
 
 .navbar {
+    background-color: var(--accent-color);
+    color: var(--read-color);
     grid-row: 1/3;
+}
+
+.header {
+    grid-column: 2/3;
 }
